refactored fullscreen.js

--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
         <i class="material-icons">image</i>
       </button>
       <span></span>
-      <button aria-label="Fullscreen" id="fullscreen" onclick="fullscreen()">
+      <button
+        aria-label="Fullscreen"
+        id="fullscreen"
+        onclick="Fullscreen.fullscreen()"
+      >
         <i class="material-icons">fullscreen</i>
       </button>
       <span data-before="Fullscreen" style="--left: -4.1em"></span>
