refactored images.js

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
       <input
         aria-label="Select image"
         id="select_image"
-        onchange="readImage(this)"
+        onchange="Images.readImage(this)"
         type="file"
         accept="image/*"
       />
       <button
         aria-label="Add image"
         id="add_image"
-        onclick="triggerCreateNewImage()"
+        onclick="Images.triggerCreateNewImage()"
       >
         <i class="material-icons">image</i>
       </button>
