refactored texts.js

--- a/index.html
+++ b/index.html
@@ -60,14 +60,18 @@
         onmouseover="Slides.focusSlideNumberInput()"
       />
       <span></span>
-      <button aria-label="Add text" id="add_text" onclick="createNewText()">
+      <button
+        aria-label="Add text"
+        id="add_text"
+        onclick="Texts.createNewText()"
+      >
         abc
       </button>
       <span></span>
       <button
         aria-label="Add big text"
         id="add_big_text"
-        onclick="createNewBigText()"
+        onclick="Texts.createNewBigText()"
       >
         &nbsp;
       </button>
