--- a/index.html
+++ b/index.html
@@ -10,20 +10,13 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
       rel="stylesheet"
     />
-    <!-- <script src="https://cdn.jsdelivr.net/gh/hchiam/draggable@main/makeElementDraggableAndEditable.js"></script> -->
-    <script
-      src="https://cdn.jsdelivr.net/gh/hchiam/draggable@3.3.2/makeElementDraggableAndEditable.js"
-      integrity="sha384-vt5RO8lVE9KiJD/Hc+VcL9WsO+1M53cBpB71LFqiPZYtWi4RH5shFLSTOAi9YtUC"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/gh/hchiam/_2DNote@1.12.0/_2DNote.min.js"
-      integrity="sha384-WdS+mavw33iD6+LA5WvOOdklYxzu60nE9DdK9RlJITvWzSJPeF8pF1ln7VrWa+yC"
-      crossorigin="anonymous"
-    ></script>
-    <!-- <script src="makeElementDraggableAndEditable.js"></script> -->
     <link rel="stylesheet" href="other-css/boilerplate.css" />
     <script type="text/javascript" src="other-js/debug.js"></script>
+    <script
+      type="text/javascript"
+      src="other-js/makeElementDraggableAndEditable.js"
+    ></script>
+    <script type="text/javascript" src="other-js/_2DNote.min.js"></script>
     <script type="text/javascript" src="other-js/plugins.js"></script>
     <script type="text/javascript" src="other-js/a11y.js"></script>
     <script type="text/javascript" src="other-js/texts.js"></script>
