locally store localforage

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       tabindex="-1"
     ></div>
     <link rel="stylesheet" href="slides.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.9.0/localforage.min.js"></script>
+    <script type="text/javascript" src="other-js/localforage.min.js"></script>
     <script type="text/javascript" src="other-js/memory.js"></script>
     <script type="text/javascript" src="slides.js"></script>
   </body>
