locally store material-icons css file. make license link more obvious for _2DNote

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="description" content="Simple slides. Edit. Present." />
     <title>Simple Slides</title>
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="other-css/material-icons.css" />
     <link rel="stylesheet" href="other-css/boilerplate.css" />
     <script type="text/javascript" src="other-js/debug.js"></script>
     <script
