--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Simple slides. Edit. Present." />
     <title>Simple Slides</title>
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="other-css/material-icons.css" />
-    <link rel="stylesheet" href="other-css/boilerplate.css" />
-    <script type="text/javascript" src="other-js/debug.js"></script>
+    <!-- <link rel="stylesheet" href="other-css/material-icons.css" />
+    <link rel="stylesheet" href="other-css/boilerplate.css" /> -->
+    <!-- <script type="text/javascript" src="other-js/debug.js"></script>
     <script
       type="text/javascript"
       src="other-js/makeElementDraggableAndEditable.js"
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="other-js/texts.js"></script>
     <script type="text/javascript" src="other-js/images.js"></script>
     <script type="text/javascript" src="other-js/fullscreen.js"></script>
-    <script type="text/javascript" src="other-js/laser.js"></script>
+    <script type="text/javascript" src="other-js/laser.js"></script> -->
   </head>
   <body>
     <!-- Found a bug? Feel free to report suggestions here: https://github.com/hchiam/slides/issues -->
@@ -124,9 +124,11 @@
       aria-live="assertive"
       tabindex="-1"
     ></div>
+    <link rel="stylesheet" href="minified.css" />
     <link rel="stylesheet" href="slides.css" />
-    <script type="text/javascript" src="other-js/localforage.min.js"></script>
-    <script type="text/javascript" src="other-js/memory.js"></script>
+    <script type="text/javascript" src="minified.js"></script>
+    <!-- <script type="text/javascript" src="other-js/localforage.min.js"></script>
+    <script type="text/javascript" src="other-js/memory.js"></script> -->
     <script type="text/javascript" src="slides.js"></script>
   </body>
 </html>
