--- a/index.html
+++ b/index.html
@@ -8,20 +8,6 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
     <link rel="stylesheet" href="minified.css" />
-    <!-- <link rel="stylesheet" href="other-css/material-icons.css" />
-    <link rel="stylesheet" href="other-css/boilerplate.css" /> -->
-    <!-- <script type="text/javascript" src="other-js/debug.js"></script>
-    <script
-      type="text/javascript"
-      src="other-js/makeElementDraggableAndEditable.js"
-    ></script>
-    <script type="text/javascript" src="other-js/_2DNote.min.js"></script>
-    <script type="text/javascript" src="other-js/plugins.js"></script>
-    <script type="text/javascript" src="other-js/a11y.js"></script>
-    <script type="text/javascript" src="other-js/texts.js"></script>
-    <script type="text/javascript" src="other-js/images.js"></script>
-    <script type="text/javascript" src="other-js/fullscreen.js"></script>
-    <script type="text/javascript" src="other-js/laser.js"></script> -->
   </head>
   <body>
     <!-- Found a bug? Feel free to report suggestions here: https://github.com/hchiam/slides/issues -->
@@ -30,16 +16,13 @@
       <button
         aria-label="Previous slide"
         id="left"
-        onclick="Slides.left()"
         disabled
         class="hide-on-first-load"
       >
         ◀
       </button>
       <span data-before="Previous slide" style="--left: -5em"></span>
-      <button aria-label="Next slide" id="right" onclick="Slides.right()">
-        ▶
-      </button>
+      <button aria-label="Next slide" id="right">▶</button>
       <span data-before="Next slide" style="--left: -4.2em"></span>
       <input
         aria-label="Slide number"
@@ -47,55 +30,27 @@
         min="1"
         type="number"
         value="1"
-        onkeyup="Slides.delayedSetSlideNumber(this.value)"
-        onchange="Slides.setSlideNumber(this.value)"
-        onmouseover="Slides.focusSlideNumberInput()"
       />
       <span></span>
-      <button
-        aria-label="Add text"
-        id="add_text"
-        onclick="Texts.createNewText()"
-      >
-        abc
-      </button>
+      <button aria-label="Add text" id="add_text">abc</button>
       <span></span>
-      <button
-        aria-label="Add big text"
-        id="add_big_text"
-        onclick="Texts.createNewBigText()"
-      >
-        &nbsp;
-      </button>
+      <button aria-label="Add big text" id="add_big_text">&nbsp;</button>
       <span></span>
       <input
         aria-label="Select image"
         id="select_image"
-        onchange="Images.readImage(this)"
         type="file"
         accept="image/*"
       />
-      <button
-        aria-label="Add image"
-        id="add_image"
-        onclick="Images.triggerCreateNewImage()"
-      >
+      <button aria-label="Add image" id="add_image">
         <i class="material-icons">image</i>
       </button>
       <span></span>
-      <button
-        aria-label="Fullscreen"
-        id="fullscreen"
-        onclick="Fullscreen.fullscreen()"
-      >
+      <button aria-label="Fullscreen" id="fullscreen">
         <i class="material-icons">fullscreen</i>
       </button>
       <span data-before="Fullscreen" style="--left: -4.1em"></span>
-      <button
-        aria-label="Save slide data as JSON"
-        id="save"
-        onclick="Memory.save()"
-      >
+      <button aria-label="Save slide data as JSON" id="save">
         <i class="material-icons">download</i>
       </button>
       <span></span>
@@ -105,15 +60,11 @@
         type="file"
         accept=".json"
       />
-      <button
-        aria-label="Reuse JSON format slide data"
-        id="upload"
-        onclick="Memory.upload()"
-      >
+      <button aria-label="Reuse JSON format slide data" id="upload">
         <i class="material-icons">upload</i>
       </button>
       <span></span>
-      <button aria-label="Delete" id="delete" onclick="Memory.deleteAll()">
+      <button aria-label="Delete" id="delete">
         <i class="material-icons">delete</i>
       </button>
       <span></span>
@@ -126,10 +77,6 @@
       aria-live="assertive"
       tabindex="-1"
     ></div>
-    <link rel="stylesheet" href="slides.css" />
     <script type="text/javascript" src="minified.js"></script>
-    <!-- <script type="text/javascript" src="other-js/localforage.min.js"></script>
-    <script type="text/javascript" src="other-js/memory.js"></script> -->
-    <script type="text/javascript" src="slides.js"></script>
   </body>
 </html>
