enable using the old save() and upload() as console commands [skip ci]

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
         <i class="material-icons">share</i>
       </button>
       <span></span>
+      <input
+        aria-label="Select JSON file"
+        id="select_json_file"
+        type="file"
+        accept=".json"
+      />
 
       <button aria-label="Delete" id="delete">
         <i class="material-icons">delete</i>
