--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       </button>
       <span data-before="Fullscreen" style="--left: -4.1em"></span>
 
-      <button aria-label="Share link" id="share">
-        <i class="material-icons">share</i>
+      <button aria-label="Save slide data as JSON" id="save">
+        <i class="material-icons">download</i>
       </button>
       <span></span>
       <input
@@ -68,6 +68,16 @@
         type="file"
         accept=".json"
       />
+
+      <button aria-label="Reuse JSON format slide data" id="upload">
+        <i class="material-icons">upload</i>
+      </button>
+      <span></span>
+
+      <button aria-label="Share link" id="share">
+        <i class="material-icons">share</i>
+      </button>
+      <span></span>
 
       <button aria-label="Delete" id="delete">
         <i class="material-icons">delete</i>
