--- a/index.html
+++ b/index.html
@@ -93,5 +93,14 @@
       tabindex="-1"
     ></div>
     <script type="text/javascript" src="minified.js"></script>
+    <script type="text/javascript">
+      A11y.setUp2DNoteListeners();
+      Texts.initializeTextButtons();
+      Images.initializeImageButtons();
+      Fullscreen.initialize();
+      Memory.initialize();
+      Firebase.initialize();
+      Slides.initialize();
+    </script>
   </body>
 </html>
