--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </button>
       <span></span>
 
-      <button aria-label="Share link" id="share">
+      <button aria-label="Share link" id="share" class="fill-screen">
         <i class="material-icons">share</i>
       </button>
       <span></span>
