--- a/index.html
+++ b/index.html
@@ -92,13 +92,35 @@
       aria-live="assertive"
       tabindex="-1"
     ></div>
-    <script type="text/javascript" src="minified.js"></script>
+    <!-- <script type="text/javascript" src="minified.js"></script> -->
+    <script type="text/javascript" src="other-js/_2DNote.min.js"></script>
+    <script type="text/javascript" src="other-js/clipboard.js"></script>
+    <script type="text/javascript" src="other-js/localforage.min.js"></script>
+    <script
+      type="text/javascript"
+      src="other-js/makeElementDraggable.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="other-js/makeElementDraggableAndEditable.js"
+    ></script>
+    <script type="text/javascript" src="other-js/morphing_button.js"></script>
+    <script type="text/javascript" src="other-js/debug.js"></script>
+    <script type="text/javascript" src="other-js/plugins.js"></script>
+    <script type="text/javascript" src="other-js/a11y.js"></script>
+    <script type="text/javascript" src="other-js/images.js"></script>
+    <script type="text/javascript" src="other-js/fullscreen.js"></script>
+    <script type="text/javascript" src="other-js/memory.js"></script>
+    <script type="text/javascript" src="other-js/texts.js"></script>
+    <script type="text/javascript" src="other-js/firebase.js"></script>
+    <script type="text/javascript" src="other-js/laser.js"></script>
+    <script type="text/javascript" src="slides.js"></script>
     <script type="text/javascript">
       A11y.setUp2DNoteListeners();
-      Texts.initializeTextButtons();
       Images.initializeImageButtons();
       Fullscreen.initialize();
       Memory.initialize();
+      Texts.initializeTextButtons();
       Firebase.initialize();
       Slides.initialize();
     </script>
