ready for prod [skip ci]

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
       aria-live="assertive"
       tabindex="-1"
     ></div>
-    <!-- <script type="text/javascript" src="minified.js"></script> -->
-    <script type="text/javascript" src="other-js/_2DNote.min.js"></script>
+    <script type="text/javascript" src="minified.js"></script>
+    <!-- <script type="text/javascript" src="other-js/_2DNote.min.js"></script>
     <script type="text/javascript" src="other-js/clipboard.js"></script>
     <script type="text/javascript" src="other-js/localforage.min.js"></script>
     <script
@@ -114,7 +114,7 @@
     <script type="text/javascript" src="other-js/memory.js"></script>
     <script type="text/javascript" src="other-js/firebase.js"></script>
     <script type="text/javascript" src="other-js/laser.js"></script>
-    <script type="text/javascript" src="slides.js"></script>
+    <script type="text/javascript" src="slides.js"></script> -->
     <script type="text/javascript">
       A11y.setUp2DNoteListeners();
       Texts.initializeTextButtons();
