fix#117: spinner for Share button. removed "clipboard" from messages. (also focus trap for better a11y.)

--- a/index.html
+++ b/index.html
@@ -107,10 +107,15 @@
     <script type="text/javascript" src="other-js/morphing_button.js"></script>
     <script type="text/javascript" src="other-js/debug.js"></script>
     <script type="text/javascript" src="other-js/plugins.js"></script>
+    <script
+      type="text/javascript"
+      src="other-js/keyboard-focus-trap.js"
+    ></script>
     <script type="text/javascript" src="other-js/a11y.js"></script>
     <script type="text/javascript" src="other-js/texts.js"></script>
     <script type="text/javascript" src="other-js/images.js"></script>
     <script type="text/javascript" src="other-js/fullscreen.js"></script>
+    <script type="text/javascript" src="other-js/spinner.js"></script>
     <script type="text/javascript" src="other-js/memory.js"></script>
     <script type="text/javascript" src="other-js/firebase.js"></script>
     <script type="text/javascript" src="other-js/laser.js"></script>
@@ -120,6 +125,7 @@
       Texts.initializeTextButtons();
       Images.initializeImageButtons();
       Fullscreen.initialize();
+      Spinner.initialize();
       Memory.initialize();
       Firebase.initialize();
       Slides.initialize();
