you can now tab to the Delete image icon. moved setUpKeyboardFocusListeners to a11y.js (for #92)

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <script type="text/javascript" src="other-js/laser.js"></script>
     <script type="text/javascript" src="slides.js"></script>
     <script type="text/javascript">
-      A11y.setUp2DNoteListeners();
+      A11y.initialize();
       Texts.initializeTextButtons();
       Images.initializeImageButtons();
       Fullscreen.initialize();
