--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       tabindex="-1"
     ></div>
     <script type="text/javascript" src="minified.js"></script>
-    <script type="text/javascript" src="other-js/_2DNote.min.js"></script>
+    <!-- <script type="text/javascript" src="other-js/_2DNote.min.js"></script>
     <script type="text/javascript" src="other-js/clipboard.js"></script>
     <script type="text/javascript" src="other-js/localforage.min.js"></script>
     <script
@@ -119,16 +119,18 @@
     <script type="text/javascript" src="other-js/memory.js"></script>
     <script type="text/javascript" src="other-js/firebase.js"></script>
     <script type="text/javascript" src="other-js/laser.js"></script>
-    <script type="text/javascript" src="slides.js"></script>
+    <script type="text/javascript" src="slides.js"></script> -->
     <script type="text/javascript">
+      Spinner.initialize();
+      window.Spinner.show();
       A11y.initialize();
       Texts.initializeTextButtons();
       Images.initializeImageButtons();
       Fullscreen.initialize();
-      Spinner.initialize();
       Memory.initialize();
       Firebase.initialize();
       Slides.initialize();
+      window.Spinner.hide();
     </script>
   </body>
 </html>
