--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
     <link rel="stylesheet" href="minified.css" />
   </head>
-  <body data-content="">
+  <body data-content="" class="loading">
     <!-- Found a bug? Feel free to report suggestions here: https://github.com/hchiam/slides/issues -->
     <section id="mobile_message"></section>
     <section id="controls">
