fix #125: audio feedback when moving text via keyboard only

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       type="text/javascript"
       src="other-js/keyboard-focus-trap.js"
     ></script>
+    <script type="text/javascript" src="other-js/hitKey.js"></script>
     <script type="text/javascript" src="other-js/a11y.js"></script>
     <script type="text/javascript" src="other-js/texts.js"></script>
     <script type="text/javascript" src="other-js/images.js"></script>
