clarify Delete -> Delete all slides (#93, step 1)

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </button>
       <span></span>
 
-      <button aria-label="Delete" id="delete">
+      <button aria-label="Delete all slides" id="delete">
         <i class="material-icons">delete</i>
       </button>
       <span></span>
